# gsd-2

./: CONTRIBUTING.md  README.md  package-lock.json  package.json
.gsd/: DECISIONS.md  PROJECT.md  gsd.db-shm  gsd.db-wal
.gsd/milestones/M003/: M003-ROADMAP.md
docs/: configuration.md  token-optimization.md
mintlify-docs/guides/: working-in-teams.mdx
native/crates/engine/: Cargo.toml
native/crates/engine/src/: lib.rs
src/: headless.ts  onboarding.ts  resource-loader.ts  wizard.ts
src/resources/extensions/browser-tools/: cmux-backend.ts
src/resources/extensions/cmux/: index.ts
src/resources/extensions/google-search/: index.ts
src/resources/extensions/gsd/: auto-dispatch.ts  auto-prompts.ts  auto-recovery.ts  auto-start.ts  auto-worktree.ts  auto.ts  commands-config.ts  commands-prefs-wizard.ts  commands.ts  db-writer.ts  detection.ts  doctor-checks.ts  doctor.ts  error-classifier.ts  extension-manifest.json  (+19 more)
src/tests/: clipboard-markers.test.ts  cmux-backend.test.ts  google-search-auth.repro.test.ts  headless-cli-surface.test.ts
src/tests/integration/: pack-install.test.ts  web-mode-onboarding.test.ts
src/web/: hooks-service.ts
vscode-extension/: package.json
vscode-extension/src/: code-lens.ts  conversation-history.ts  extension.ts  gsd-client.ts  session-tree.ts  sidebar.ts  slash-completion.ts
web/components/gsd/: app-shell.tsx  chat-mode.tsx  dashboard.tsx  main-session-terminal.tsx  projects-view.tsx  roadmap.tsx  settings-panels.tsx  shell-terminal.tsx  sidebar.tsx  visualizer-view.tsx
web/lib/: auth.ts  gsd-workspace-store.tsx
(+86 files in other folders)
