[package]
name = "gsd-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "N-API native addon for GSD — exposes high-performance Rust modules to Node.js"

[lib]
crate-type = ["cdylib"]

[dependencies]
gsd-grep = { path = "../grep" }
dashmap = "6"
globset = "0.4"
ignore = "0.4"
napi = { version = "2", features = ["napi8"] }
napi-derive = "2"

[build-dependencies]
napi-build = "2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
